<resources>
    <string name="app_name">My Application</string>
    <string name="to_second_screen">To second screen</string>
    <string name="to_third_screen">To third screen</string>
    <string name="sample_text">Sample text</string>
    <string name="to_bottom_sheet">To bottom sheet</string>
    <string name="send">Send</string>
    <string name="main_page_header_text">main_page_header_text</string>
    <string name="submit">submit</string>
    <string name="prev">Предыдущая</string>
    <string name="next">Следующая</string>
    <string name="sample_question">Do you know?</string>
    <string name="finish">ЗАВЕРШИТЬ</string>
    <string name="nextBtn">СЛЕДУЮЩАЯ</string>
    <string name="resetСolor">Сбросить цвет</string>
    <string name="showNotification">Показать уведомление</string>
    <string name="text_enter_default">Введите текст</string>
    <string name="text_notification">Текст уведомления</string>
    <string name="text_title_notification">Заголовок уведомления</string>
    <string name="text_channel_default">Стандартный канал уведомлений</string>
    <string name="text_channel_private">Приватный канал уведомлений</string>
    <string name="text_channel_urgent">Срочный канал уведомлений</string>
    <string name="text_channel_low">Тихий канал уведомлений</string>
    <string name="toast_opened_via_notifications">Запущено из уведомления</string>
    <string name="toast_empty_title">Пустой заголовок</string>
    <string name="toast_empty_text">Пустое сообщение</string>
    <string name="max_importance">Max</string>
    <string name="high_importance">High</string>
    <string name="default_importance">Default</string>
    <string name="low_importance">Low</string>
    <string name="default_channel_id">default_channel_id</string>
    <string name="low_channel_id">low_channel_id</string>
    <string name="private_channel_id">private_channel_id</string>
    <string name="urgent_channel_id">urgent_channel_id</string>
    <string name="default_text_view">Default</string>
    <string name="no_image_selected">Изображение не выбрано</string>
    <string name="image_already_selected">Изображение уже выбрано</string>
    <string name="io">IO</string>
    <string name="main">Main</string>
    <string name="default_mode">Default</string>
    <string name="cor_already_on">Корутины уже запущены</string>
    <string name="cor_finished">coroutine finished on thread:</string>
    <string name="unconfined">Unconfined</string>
    <string name="err">Error:</string>
    <string name="begin_work">Начать выполнение</string>
    <string name="discard_work">Отменить выполнение</string>
    <string name="more_options">More options</string>
    <string name="pool_threads">Пул-поток</string>
    <string name="number_of_coroutines">Число корутин</string>
    <string name="parralel">Параллельно</string>
    <string name="seq">Последовательно</string>
    <string name="cancel_back">Отмена при сворачивании</string>
    <string name="continue_then">Продолжать в свернутом режиме</string>
    <string name="goto_settings">В настройки</string>
    <string name="choose_cor_logic">Выберите логику работы корутин:</string>
    <string name="how_to_start">Как будут запущены корутины?</string>
    <string name="on_offed_notifications">Вы отключили уведомления навсегда. Пожалуйста, включите их в настройках.</string>
    <string name="enter_nickname">Введите никнейм</string>
    <string name="enter_password">Введите пароль</string>
    <string name="enter_email">Введите email</string>
    <string name="invalid_email">Некорректный email</string>
    <string name="invalid_password">Пароль должен содержать: буквы, цифры, символы</string>
    <string name="invalid_nickname">Длина ника от 3 до 15 латинских букв</string>
    <string name="reg">Зарегистрироваться</string>
    <string name="sign_in">Войти</string>
    <string name="or_sign_in">Вход</string>
    <string name="or_sign_up">Регистрация</string>
    <string name="incorrect_user_or_email">Некорректный email или никнейм</string>
    <string name="user_or_email">Email или никнейм</string>
    <string name="email_taken">Email уже занят</string>
    <string name="exit">Выйти</string>
    <string name="name">Название</string>
    <string name="year">Год выхода</string>
    <string name="description">Описание</string>
    <string name="description_star">Star</string>
    <string name="review">—  ваша оценка</string>
    <string name="save">Сохранить</string>
    <string name="year_eng">Year:</string>
    <string name="rating_eng">Rating:</string>
    <string name="movie_cover">Movie caver</string>
    <string name="movie_cover_no_image">No image</string>
    <string name="close">Закрыть</string>

</resources>