<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:gravity="center"
        android:text="@string/sample_text"
        android:id="@+id/counter"
        android:textSize="32sp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/contentVp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/counter"
        app:layout_constraintBottom_toTopOf="@id/previous_button"
        android:layout_marginBottom="16dp"/>

    <Button
        android:layout_marginBottom="16dp"
        android:id="@+id/previous_button"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/next_button"
        android:text="@string/prev" />

    <Button
        android:layout_marginBottom="16dp"
        android:id="@+id/next_button"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/previous_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/previous_button"
        android:text="@string/next" />

</androidx.constraintlayout.widget.ConstraintLayout>