<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_marginTop="24dp"
        android:id="@+id/imgBtnAvatar"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:focusable="true"
        app:cardCornerRadius="240dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        android:foreground="@drawable/ripple_circle">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="match_parent"
            android:backgroundTint="@color/design_default_color_on_primary"
            android:contentDescription="@string/default_text_view"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.imageview.ShapeableImageView
        android:focusable="true"
        android:clickable="true"
        android:foreground="@drawable/ripple_circle"
        android:contentDescription="@string/default_text_view"
        android:id="@+id/btn_delete"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="?attr/colorPrimary"
        android:src="@drawable/baseline_close_24"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@id/imgBtnAvatar"
        app:layout_constraintEnd_toEndOf="@id/imgBtnAvatar"
        android:tint="?attr/colorOnPrimary"
        android:elevation="4dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CircularImageView" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnAvatar">

        <ImageButton
            android:id="@+id/btn_show_themes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/design_default_color_on_primary"
            android:contentDescription="@string/default_text_view"
            android:padding="16dp"
            android:src="@drawable/baseline_keyboard_double_arrow_down_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/themes_rv"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            android:padding="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_show_themes">
        </androidx.recyclerview.widget.RecyclerView>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/text_enter_default"
        app:layout_constraintBottom_toTopOf="@+id/text_input_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:helperText="@string/text_title_notification">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_enter_default"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/importance_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:helperText="@string/text_notification">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_et_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/importance_spinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_show_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reset_color"
        android:text="@string/resetСolor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAllCaps="false"
        android:layout_marginBottom="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_show_notification"
        android:text="@string/showNotification"
        android:layout_width="match_parent"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_reset_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>